Committing HTML Files

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Contact Me</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
@@ -21,24 +21,16 @@
             <a href="contact.html">Contact</a>
         </section>
     </nav>
-    <div class="contact">
+    <div class="portfolio">
         <br>
-        <h2>Contact Header</h2>
+        <h2>Portfolio Header</h2>
         <hr>
-        <p>Name Label</p>
-        <p>Name Text Box</p>
-        <p>Email Label</p>
-        <p>Email Text Box</p>
-        <p>Message Label</p>
-        <p>Messabe Text Box</p>
-        <button type="button">Submit Button</button>
-    </div>
-    <div class="connect">
-        <h3>Connect with Me Header</h3>
-        <hr>
-        <a id="slink1" href="#"><img src="assets/images/github64.png" alt=SocialLink1></a>
-        <a id="slink2" href="#"><img src="assets/images/linkedin64.png" alt=SocialLink2></a>
-        <a id="slink3" href="#"><img src="assets/images/pinterest64.png" alt=SocialLink3></a>
+        <a id="plink1" href="#"><img src="assets/images/Cats01.jpg" alt=PortfolioImage1></a>
+        <a id="plink2" href="#"><img src="assets/images/Cats02.jpg" alt=PortfolioImage2></a>
+        <a id="plink3" href="#"><img src="assets/images/Cats03.jpg" alt=PortfolioImage3></a>
+        <a id="plink4" href="#"><img src="assets/images/Cats05.jpg" alt=PortfolioImage4></a>
+        <a id="plink5" href="#"><img src="assets/images/Cats06.jpg" alt=PortfolioImage5></a>
+        <a id="plink6" href="#"><img src="assets/images/Cats07.jpg" alt=PortfolioImage6></a>
     </div>
 
 </body>
