Completed index page coding and styling.

--- a/index.html
+++ b/index.html
@@ -13,35 +13,44 @@
 
 <body>
 
-    <nav>
-        <header>
-            <h1 id="NAMEHD">My Name Header</h1>
-        </header>
-        <section>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </section>
+    <nav id="navBar">
+        <div id="navContent">
+            <div id="logo">
+                <h1 id="logoHeader">Luis Morel</h1>
+            </div>
+            <div id="links">
+                <a href="index.html">About</a> |
+                <a href="portfolio.html">Portfolio</a> |
+                <a href="contact.html">Contact</a>
+            </div>
+        </div>
     </nav>
+    <br>
 
-    <div class="aboutMe">
-        <br>
-        <h2>About Me Header</h2>
+    <div id="aboutMe">
+        <h1 id="aboutMeHeader">About Me</h1>
         <hr>
-        <img id="Image" src="assets/images/Cats04.jpg" alt="My Photo">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id in fuga voluptatem ex pariatur exercitationem, placeat
-            minus autem ducimus sit sequi molestiae explicabo quibusdam corporis rerum repellat. Voluptatibus, rem quae.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, sequi odit ipsa pariatur ratione maxime sunt
-            nisi aliquam, autem laboriosam sit nihil saepe dolore illum quam harum! Ipsum, suscipit omnis. Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Blanditiis laborum temporibus reprehenderit sequi delectus alias accusantium
-            pariatur necessitatibus? Fuga eius laborum est cupiditate corporis architecto enim error voluptas exercitationem
-            temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium mollitia, aliquid repellat
-            reprehenderit aliquam labore nam provident enim, est in, odio illum. Sed eaque, aliquid quae molestiae aspernatur
-            tempore? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit perferendis libero sunt ullam eaque
-            natus, voluptas unde neque quae facere itaque tenetur pariatur ab! Dolorum, officia deserunt? Nobis, incidunt
-            rerum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi est architecto ipsa sint perferendis optio
-            nesciunt voluptatibus! Blanditiis eius aperiam dolor nulla, atque minus ipsa minima quo eveniet, consequuntur
-            consectetur.
+        <br>
+        <img id="Image" src="assets/images/cats04.jpg" alt="My Photo">
+        <p>
+            Spicy jalapeno bacon ipsum dolor amet fatback ham hock pancetta, buffalo tenderloin strip steak corned beef cow jerky ribeye
+            boudin meatloaf filet mignon. Tongue andouille hamburger short ribs, pig filet mignon prosciutto pork pork loin
+            fatback bresaola kielbasa sausage. Leberkas meatloaf andouille pig turducken alcatra chuck corned beef burgdoggen
+            pork loin buffalo shank filet mignon. Shank kielbasa sirloin flank beef.
+        </p>
+        <br>
+        <p>
+            Pork kielbasa ground round, salami boudin beef ribs strip steak pastrami ham hock tenderloin capicola. Ball tip andouille
+            shoulder, buffalo corned beef porchetta short ribs filet mignon. Pastrami boudin rump tenderloin fatback. Leberkas
+            kielbasa pork loin jerky. Prosciutto cupim fatback drumstick. Sausage jowl burgdoggen meatloaf tongue pancetta
+            filet mignon shank t-bone landjaeger ground round meatball. Pig pastrami leberkas, shoulder corned beef fatback
+            filet mignon.
+        </p>
+        <br>
+        <p>
+            Short ribs doner t-bone, cow shankle short loin ham cupim sausage. Strip steak ribeye rump prosciutto venison. Sausage meatball
+            ham hock andouille pig t-bone cow buffalo kielbasa pork loin frankfurter venison short loin chuck. Short ribs
+            landjaeger turkey cupim cow porchetta. Bresaola salami pork chop picanha tenderloin sirloin.
         </p>
     </div>
 
