--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             landjaeger turkey cupim cow porchetta. Bresaola salami pork chop picanha tenderloin sirloin.
         </p>
     </div>
+    <br>
+
+    <footer class="pagefooter">
+        <a href="index.html">Copyright &copy; 2018 Luis Morel</a>
+    </footer>
 
 </body>
 
