--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                 <img class="images" src="assets/images/Cats01.jpg" alt=PortfolioImage1>
             </a>
             <div class="imageLabelBox imageLabel1">
-                Wise Cat
+                Sage Cat
             </div>
             <a href="#">
                 <img class="images" src="assets/images/Cats02.jpg" alt=PortfolioImage2>
@@ -49,7 +49,7 @@
                 <img class="images" src="assets/images/Cats03.jpg" alt=PortfolioImage3>
             </a>
             <div class="imageLabelBox imageLabel1">
-                Irritated Cat
+                Grouchy Cat
             </div>
             <a href="#">
                 <img class="images" src="assets/images/Cats05.jpg" alt=PortfolioImage4>
@@ -69,6 +69,11 @@
 
         </div>
     </div>
+    <br>
+
+    <footer class="pagefooter">
+        <a href="index.html">Copyright &copy; 2018 Luis Morel</a>
+    </footer>
 
 </body>
 
