Troubleshooting problem with About Me image.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 id="aboutMeHeader">About Me</h1>
         <hr>
         <br>
-        <img id="aboutMeImg" src="assets/images/cats04.jpg" alt="My Photo">
+        <img id="aboutMeImg" src="assets/images/cats04.png" alt="My Photo">
         <p>
             Spicy jalapeno bacon ipsum dolor amet fatback ham hock pancetta, buffalo tenderloin strip steak corned beef cow jerky ribeye
             boudin meatloaf filet mignon. Tongue andouille hamburger short ribs, pig filet mignon prosciutto pork pork loin
