Updating Portfolio Page

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,11 @@
         <hr>
         <br>
         <div class="portfolioRow">
-            <a href="#">
-                <img class="images" src="assets/images/Cats01.jpg" alt=PortfolioImage1>
+            <a href="https://lmorel77.github.io/week-4-game/" target="_blank">
+                <img class="images" src="assets/images/crystals1.png" alt=PortfolioImage1>
             </a>
             <div class="imageLabelBox imageLabel1">
-                Sage Cat
+                Crystals Collector
             </div>
             <a href="#">
                 <img class="images" src="assets/images/Cats02.jpg" alt=PortfolioImage2>
