--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                 Crystals Collector
             </div>
             <a href="#">
-                <img class="images" src="assets/images/Cats02.jpg" alt=PortfolioImage2>
+                <img class="images" src="assets/images/fixCats02.jpg" alt=PortfolioImage2>
             </a>
             <div class="imageLabelBox imageLabel2">
                 Neighborly Cat
@@ -46,13 +46,13 @@
         <br>
         <div class="portfolioRow">
             <a href="#">
-                <img class="images" src="assets/images/Cats03.jpg" alt=PortfolioImage3>
+                <img class="images" src="assets/images/fixCats03.jpg" alt=PortfolioImage3>
             </a>
             <div class="imageLabelBox imageLabel1">
                 Grouchy Cat
             </div>
             <a href="#">
-                <img class="images" src="assets/images/Cats05.jpg" alt=PortfolioImage4>
+                <img class="images" src="assets/images/fixCats05.jpg" alt=PortfolioImage4>
             </a>
             <div class="imageLabelBox imageLabel2">
                 Travel Cat
@@ -61,7 +61,7 @@
         <br>
         <div class="portfolioRow">
             <a href="#">
-                <img class="images" src="assets/images/Cats06.jpg" alt=PortfolioImage5>
+                <img class="images" src="assets/images/fixCats06.jpg" alt=PortfolioImage5>
             </a>
             <div class="imageLabelBox imageLabel1">
                 Perplexed Cat
