Portfolio Page Update

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,11 @@
             <div class="imageLabelBox imageLabel1">
                 Crystals Collector
             </div>
-            <a href="#">
-                <img class="images" src="assets/images/cats02.jpg" alt=PortfolioImage2>
+            <a href="https://lmorel77.github.io/Psychic-Game/" target="_blank">
+                <img class="images" src="assets/images/psychic1.jpg" alt=PortfolioImage2>
             </a>
             <div class="imageLabelBox imageLabel2">
-                Neighborly Cat
+                Psychic Game
             </div>
         </div>
         <br>
