--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,11 @@
         </div>
         <br>
         <div class="portfolioRow">
-            <a href="#">
-                <img class="images" src="assets/images/cats03.jpg" alt=PortfolioImage3>
+            <a href="https://lmorel77.github.io/GifTastic/">
+                <img class="images" src="assets/images/giphy.png" alt=PortfolioImage3>
             </a>
             <div class="imageLabelBox imageLabel1">
-                Grouchy Cat
+                Gif Mania
             </div>
             <a href="#">
                 <img class="images" src="assets/images/cats05.jpg" alt=PortfolioImage4>
