--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         </div>
         <br>
         <div class="portfolioRow">
-            <a href="https://lmorel77.github.io/GifTastic/">
+            <a href="https://lmorel77.github.io/GifTastic/" target="_blank">
                 <img class="images" src="assets/images/giphy.png" alt=PortfolioImage3>
             </a>
             <div class="imageLabelBox imageLabel1">
