--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <nav id="navBar">
         <div id="navContent">
             <div id="logo">
-                <h1 id="logoHeader">Luis Morel</h1>
+                <h1 id="logoHeader">Developer Cat</h1>
             </div>
             <div id="links">
                 <a href="index.html">About</a> |
