--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <nav id="navBar">
         <div id="navContent">
             <div id="logo">
-                <h1 id="logoHeader">Luis Morel</h1>
+                <h1 id="logoHeader">Developer Cat</h1>
             </div>
             <div id="links">
                 <a href="index.html">About</a> |
@@ -30,44 +30,33 @@
         <hr>
         <br>
         <div class="portfolioRow">
-            <a href="https://lmorel77.github.io/week-4-game/" target="_blank">
-                <img class="images" src="assets/images/crystals1.png" alt=PortfolioImage1>
-            </a>
-            <div class="imageLabelBox imageLabel1">
-                Crystals Collector
-            </div>
-            <a href="https://lmorel77.github.io/Psychic-Game/" target="_blank">
-                <img class="images" src="assets/images/psychic1.jpg" alt=PortfolioImage2>
-            </a>
-            <div class="imageLabelBox imageLabel2">
-                Psychic Game
-            </div>
+            <a href="#"><img class="images" src="assets/images/sage.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel1">Sage</div>
+            <a href="#"><img class="images" src="assets/images/thirsty.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel2">Thirsty</div>
         </div>
         <br>
         <div class="portfolioRow">
-            <a href="https://lmorel77.github.io/GifTastic/" target="_blank">
-                <img class="images" src="assets/images/giphy.png" alt=PortfolioImage3>
-            </a>
-            <div class="imageLabelBox imageLabel1">
-                Gif Mania
-            </div>
-            <a href="#">
-                <img class="images" src="assets/images/cats05.jpg" alt=PortfolioImage4>
-            </a>
-            <div class="imageLabelBox imageLabel2">
-                Travel Cat
-            </div>
+            <a href="#"><img class="images" src="assets/images/hitchhiker.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel1">Hitchhiker</div>
+            <a href="#"><img class="images" src="assets/images/ambassador.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel2">Ambassador</div>
         </div>
         <br>
         <div class="portfolioRow">
-            <a href="#">
-                <img class="images" src="assets/images/cats06.jpg" alt=PortfolioImage5>
-            </a>
-            <div class="imageLabelBox imageLabel1">
-                Perplexed Cat
-            </div>
-
+            <a href="#"><img class="images" src="assets/images/burrito.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel1">Burrito</div>
+            <a href="#"><img class="images" src="assets/images/saavy.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel2">Saavy</div>
         </div>
+        <br>
+        <div class="portfolioRow">
+            <a href="#"><img class="images" src="assets/images/neighborly.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel1">Neighborly</div>
+            <a href="#"><img class="images" src="assets/images/terrified.jpg" alt=PortfolioImage></a>
+            <div class="imageLabelBox imageLabel2">Terrified</div>
+        </div>
+        <br>
     </div>
     <br>
 
