--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="navBar">
         <div id="navContent">
             <div id="logo">
-                <h1 id="logoHeader">Luis Morel</h1>
+                <h1 id="logoHeader">Developer Cat</h1>
             </div>
             <div id="links">
                 <a href="index.html">About</a> |
@@ -31,7 +31,7 @@
         <h1 id="aboutMeHeader">About Me</h1>
         <hr>
         <br>
-        <img id="aboutMeImg" src="assets/images/cats04.png" alt="My Photo">
+        <img id="aboutMeImg" src="assets/images/intelligent.jpg" alt="My Photo">
         <p>
             Spicy jalapeno bacon ipsum dolor amet fatback ham hock pancetta, buffalo tenderloin strip steak corned beef cow jerky ribeye
             boudin meatloaf filet mignon. Tongue andouille hamburger short ribs, pig filet mignon prosciutto pork pork loin
