--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="shortcut icon" href="https://s3.amazonaws.com/img.cdm/letra-p-decorativa-azul-tiffany-mdf-19x15-cm-Carro-de-Mola-M-1lLik.jpg">
+    <link rel="shortcut icon" href="assets/images/favicon.jpg">
     <title>Contact Me</title>
 </head>
 
